# Trae-Work-CN-Account-Manager

./: .gitignore  CHANGELOG.md  README.md  package.json
src/: App.css  App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  login.rs  machine.rs
src-tauri/src/account/: account_manager.rs  types.rs
src-tauri/src/api/: trae_api.rs
src-tauri/src/instance/: instance_manager.rs  mod.rs  types.rs
src/components/: AccountCard.tsx  AccountListItem.tsx  ConfirmModal.tsx  ContextMenu.tsx  CreateInstanceModal.tsx  InstanceCard.tsx  Sidebar.tsx
src/pages/: About.tsx  Instances.tsx
src/types/: index.ts
