[package]
name = "trae-work-cn-account-manager"
version = "1.0.8"
description = "TRAE Work CN 多账号管理工具 - 一键切换、机器码管理"
authors = ["xhrxgr"]
edition = "2021"

[lib]
name = "trae_auto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
directories = "5"
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
warp = "0.3"
once_cell = "1"
open = "5"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

